<resources>
    <string name="app_name">Corona Virus</string>
    <string name="menu_timeline">Time Line</string>
    <string name="menu_flag">Country</string>
    <string name="menu_global">Global</string>
    <string name="total_cases">Total \ncases</string>
    <string name="total_active_cases">Active \ncases</string>
    <string name="new_cases_today">New cases\ntoday</string>
    <string name="new_deaths_today">New deaths\ntoday</string>
    <string name="description_total_cases">Total cases</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="mortality_rate">Mortality\nrate</string>
    <string name="serious_cases">Serious\ncases</string>
    <string name="country_default">Brazil</string>
    <string name="country_not_found">No information about this country!</string>
    <string name="cases_per_million">Cases per\nmillion</string>
    <string name="deaths_per_million">Deaths per\nmillion</string>
    <string name="danger_rank">Danger\nrank</string>
    <string name="saved_country">savedCountry</string>
    <string name="saved_country_default_key">BR</string>
    <string name="updated">Updated:</string>
    <string name="current_country">Current Country</string>
    <string name="favorite1">Favorite1</string>
    <string name="favorite2">Favorite2</string>
    <string name="favorite3">Favorite3</string>
</resources>
